[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Overlay/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Kenney/Kenney Rocket.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/MenuButton.tscn" type="PackedScene" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 504.0
margin_bottom = 803.0
color = Color( 0, 0, 0, 0.556863 )

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 500.0
margin_bottom = 800.0

[node name="CenterContainer2" type="CenterContainer" parent="Node2D/VBoxContainer"]
margin_right = 500.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )

[node name="Label" type="Label" parent="Node2D/VBoxContainer/CenterContainer2"]
margin_left = 91.0
margin_top = 76.0
margin_right = 409.0
margin_bottom = 124.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Game Over"

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/VBoxContainer"]
margin_top = 204.0
margin_right = 500.0
margin_bottom = 504.0
rect_min_size = Vector2( 0, 300 )
alignment = 1

[node name="Start" parent="Node2D/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 86.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 40 )
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Start2")
text = "PLAY AGAIN"
arrowMarginFromCenter = 150

[node name="Start2" parent="Node2D/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 130.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 40 )
focus_neighbour_top = NodePath("../Start")
text = "BACK TO MENU"
arrowMarginFromCenter = 150

[node name="Exit" parent="Node2D/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 174.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 40 )
focus_neighbour_bottom = NodePath("../Start")
text = "Exit"
arrowMarginFromCenter = 94

[connection signal="pressed" from="Node2D/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/VBoxContainer/Start2" to="." method="_on_Start2_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
